--- a/profiles/openenterprise/themes/bella/less/header.less
+++ b/profiles/openenterprise/themes/bella/less/header.less
@@ -1,6 +1,7 @@
 // Insert your styling here.
 header {
-	overflow: auto;
+	// Disabling overflow auto for now
+	//overflow: auto;
 }
 
 // Navbar colors
